modified index.html styles.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="./src/script.js" defer></script>
 </head>
 <body>
-  <div class="container">
+  <div class="yah">
     <h1>Address Book</h1>
 
     <form id="contactForm">
